syntax = "proto3";

package pb;

import "user.proto";
import "account.proto";

option go_package = "github.com/nicodanke/inventapp_v2/pb";

message CreateAccountRequest {
    string companyName = 1;
    string name = 2;
    string lastname = 3;
    string username = 4;
    string email = 5;
    string password = 6;
    string country = 7;
}

message CreateAccountResponse {
    Account account = 1;
    User user = 2;
}

