syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/nicodanke/inventapp_v2/pb";

message UpdateAccountRequest {
    int64 id = 1;
    optional string companyName = 2;
    optional string email = 3;
    optional bool active = 4;
    optional string phone = 5;
    optional string webUrl = 6;
    optional string country = 7;
}

message UpdateAccountResponse {
    Account account = 1;
}

